// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test news reducer should get message about a problem with authentication 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about adding news to database 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about modifying news in database 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about news list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": null,
}
`;

exports[`test news reducer should get message about news' adding fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about news' removing fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about news's modifying fail 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about removing news from database 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": 200,
}
`;

exports[`test news reducer should get message about single news' not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {},
  "status": null,
}
`;

exports[`test news reducer should load a single news 1`] = `
Object {
  "errorMessage": "Okuratna wiadomość z serwera!",
  "message": "Okuratna wiadomość z serwera!",
  "news": Array [],
  "properNews": Object {
    "_id": "1111-2222-3333-4444",
    "author": "tester",
    "category": "test-news",
    "content": "Zawartość wpisu testowego",
    "date": "01-01-2020",
    "title": "Wpis testowy",
  },
  "singleNews": Object {
    "_id": "1111-2222-3333-4444",
    "author": "tester",
    "category": "test-news",
    "content": "Zawartość wpisu testowego",
    "date": "01-01-2020",
    "title": "Wpis testowy",
  },
  "status": null,
}
`;

exports[`test news reducer should load news list 1`] = `
Object {
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "news": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "author": "tester",
      "category": "test-news",
      "content": "Zawartość wpisu testowego",
      "date": "01-01-2020",
      "title": "Wpis testowy",
    },
  ],
  "properNews": Object {},
  "status": null,
}
`;
